// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cdk stack creation for place index service creates place index policy for Authorized and Guest users access type 1`] = `
Object {
  "Mappings": Object {
    "RegionMapping": Object {
      "eu-west-2": Object {
        "locationServiceRegion": "eu-central-1",
      },
    },
  },
  "Outputs": Object {
    "Arn": Object {
      "Value": Object {
        "Fn::GetAtt": Array [
          "CustomPlaceIndex",
          "IndexArn",
        ],
      },
    },
    "Name": Object {
      "Value": Object {
        "Fn::GetAtt": Array [
          "CustomPlaceIndex",
          "IndexName",
        ],
      },
    },
    "Region": Object {
      "Value": Object {
        "Fn::FindInMap": Array [
          "RegionMapping",
          Object {
            "Ref": "AWS::Region",
          },
          "locationServiceRegion",
        ],
      },
    },
  },
  "Parameters": Object {
    "authRoleName": Object {
      "Type": "String",
    },
    "authmockAuthUserPoolId": Object {
      "Type": "String",
    },
    "authuserPoolGroupsadminGroupGroupRole": Object {
      "Type": "String",
    },
    "dataProvider": Object {
      "Type": "String",
    },
    "dataSourceIntendedUse": Object {
      "Type": "String",
    },
    "env": Object {
      "Type": "String",
    },
    "indexName": Object {
      "Type": "String",
    },
    "isDefault": Object {
      "Type": "String",
    },
    "unauthRoleName": Object {
      "Type": "String",
    },
  },
  "Resources": Object {
    "CustomPlaceIndex": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomPlaceIndexLambda79813BB9",
            "Arn",
          ],
        },
        "dataSource": Object {
          "Ref": "dataProvider",
        },
        "dataSourceIntendedUse": Object {
          "Ref": "dataSourceIntendedUse",
        },
        "env": Object {
          "Ref": "env",
        },
        "indexName": Object {
          "Fn::Join": Array [
            "-",
            Array [
              Object {
                "Ref": "indexName",
              },
              Object {
                "Ref": "env",
              },
            ],
          ],
        },
        "region": Object {
          "Fn::FindInMap": Array [
            "RegionMapping",
            Object {
              "Ref": "AWS::Region",
            },
            "locationServiceRegion",
          ],
        },
      },
      "Type": "Custom::LambdaCallout",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomPlaceIndexLambda79813BB9": Object {
      "DependsOn": Array [
        "CustomPlaceIndexLambdaServiceRoleDefaultPolicy818068B1",
        "CustomPlaceIndexLambdaServiceRoleFD2F3C9D",
      ],
      "Properties": Object {
        "Code": Object {
          "ZipFile": "const response = require('cfn-response');
const aws = require('aws-sdk');
exports.handler = async function (event, context) {
  try {
    console.log('REQUEST RECEIVED:' + JSON.stringify(event));
    const pricingPlan = 'RequestBasedUsage';
    if (event.RequestType == 'Create') {
      const params = {
        IndexName: event.ResourceProperties.indexName,
        DataSource: event.ResourceProperties.dataSource,
        DataSourceConfiguration: {
          IntendedUse: event.ResourceProperties.dataSourceIntendedUse,
        },
        PricingPlan: pricingPlan
      };
      const locationClient = new aws.Location({ apiVersion: '2020-11-19', region: event.ResourceProperties.region });
      const res = await locationClient.createPlaceIndex(params).promise();
      console.log('create resource response data' + JSON.stringify(res));
      if (res.IndexName && res.IndexArn) {
        event.PhysicalResourceId = res.IndexName;
        await response.send(event, context, response.SUCCESS, res, params.IndexName);
      } else {
        await response.send(event, context, response.FAILED, res, params.IndexName);
      }
    }
    if (event.RequestType == 'Update') {
      const params = {
        IndexName: event.ResourceProperties.indexName,
        DataSourceConfiguration: {
          IntendedUse: event.ResourceProperties.dataSourceIntendedUse,
        },
        PricingPlan: pricingPlan
      };
      const locationClient = new aws.Location({ apiVersion: '2020-11-19', region: event.ResourceProperties.region });
      const res = await locationClient.updatePlaceIndex(params).promise();
      console.log('update resource response data' + JSON.stringify(res));
      if (res.IndexName && res.IndexArn) {
        event.PhysicalResourceId = res.IndexName;
        await response.send(event, context, response.SUCCESS, res, params.IndexName);
      } else {
        await response.send(event, context, response.FAILED, res, params.IndexName);
      }
    }
    if (event.RequestType == 'Delete') {
      const params = {
        IndexName: event.ResourceProperties.indexName
      };
      const locationClient = new aws.Location({ apiVersion: '2020-11-19', region: event.ResourceProperties.region });
      const res = await locationClient.deletePlaceIndex(params).promise();
      event.PhysicalResourceId = event.ResourceProperties.indexName;
      console.log('delete resource response data' + JSON.stringify(res));
      await response.send(event, context, response.SUCCESS, res, params.IndexName);
    }
  } catch (err) {
    console.log(err.stack);
    const res = { Error: err };
    await response.send(event, context, response.FAILED, res, event.ResourceProperties.indexName);
    throw err;
  }
};
",
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "CustomPlaceIndexLambdaServiceRoleFD2F3C9D",
            "Arn",
          ],
        },
        "Runtime": "nodejs16.x",
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomPlaceIndexLambdaServiceRoleDefaultPolicy818068B1": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "geo:CreatePlaceIndex",
              "Effect": "Allow",
              "Resource": "*",
            },
            Object {
              "Action": Array [
                "geo:UpdatePlaceIndex",
                "geo:DeletePlaceIndex",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Sub": Array [
                  "arn:aws:geo:\${region}:\${account}:place-index/\${indexName}",
                  Object {
                    "account": Object {
                      "Ref": "AWS::AccountId",
                    },
                    "indexName": Object {
                      "Fn::Join": Array [
                        "-",
                        Array [
                          Object {
                            "Ref": "indexName",
                          },
                          Object {
                            "Ref": "env",
                          },
                        ],
                      ],
                    },
                    "region": Object {
                      "Fn::FindInMap": Array [
                        "RegionMapping",
                        Object {
                          "Ref": "AWS::Region",
                        },
                        "locationServiceRegion",
                      ],
                    },
                  },
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CustomPlaceIndexLambdaServiceRoleDefaultPolicy818068B1",
        "Roles": Array [
          Object {
            "Ref": "CustomPlaceIndexLambdaServiceRoleFD2F3C9D",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "CustomPlaceIndexLambdaServiceRoleFD2F3C9D": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "PlaceIndexPolicy": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "geo:SearchPlaceIndexForPosition",
                "geo:SearchPlaceIndexForText",
                "geo:SearchPlaceIndexForSuggestions",
                "geo:GetPlace",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "CustomPlaceIndex",
                  "IndexArn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::Join": Array [
                  "-",
                  Array [
                    Object {
                      "Ref": "indexName",
                    },
                    Object {
                      "Ref": "env",
                    },
                  ],
                ],
              },
              "Policy",
            ],
          ],
        },
        "Roles": Array [
          Object {
            "Ref": "authRoleName",
          },
          Object {
            "Ref": "unauthRoleName",
          },
          Object {
            "Fn::Join": Array [
              "-",
              Array [
                Object {
                  "Ref": "authmockAuthUserPoolId",
                },
                "adminGroupGroupRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;

exports[`cdk stack creation for place index service creates place index policy for Authorized users only access type 1`] = `
Object {
  "Mappings": Object {
    "RegionMapping": Object {
      "eu-west-2": Object {
        "locationServiceRegion": "eu-central-1",
      },
    },
  },
  "Outputs": Object {
    "Arn": Object {
      "Value": Object {
        "Fn::GetAtt": Array [
          "CustomPlaceIndex",
          "IndexArn",
        ],
      },
    },
    "Name": Object {
      "Value": Object {
        "Fn::GetAtt": Array [
          "CustomPlaceIndex",
          "IndexName",
        ],
      },
    },
    "Region": Object {
      "Value": Object {
        "Fn::FindInMap": Array [
          "RegionMapping",
          Object {
            "Ref": "AWS::Region",
          },
          "locationServiceRegion",
        ],
      },
    },
  },
  "Parameters": Object {
    "authRoleName": Object {
      "Type": "String",
    },
    "authmockAuthUserPoolId": Object {
      "Type": "String",
    },
    "authuserPoolGroupsadminGroupGroupRole": Object {
      "Type": "String",
    },
    "dataProvider": Object {
      "Type": "String",
    },
    "dataSourceIntendedUse": Object {
      "Type": "String",
    },
    "env": Object {
      "Type": "String",
    },
    "indexName": Object {
      "Type": "String",
    },
    "isDefault": Object {
      "Type": "String",
    },
    "unauthRoleName": Object {
      "Type": "String",
    },
  },
  "Resources": Object {
    "CustomPlaceIndex": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomPlaceIndexLambda79813BB9",
            "Arn",
          ],
        },
        "dataSource": Object {
          "Ref": "dataProvider",
        },
        "dataSourceIntendedUse": Object {
          "Ref": "dataSourceIntendedUse",
        },
        "env": Object {
          "Ref": "env",
        },
        "indexName": Object {
          "Fn::Join": Array [
            "-",
            Array [
              Object {
                "Ref": "indexName",
              },
              Object {
                "Ref": "env",
              },
            ],
          ],
        },
        "region": Object {
          "Fn::FindInMap": Array [
            "RegionMapping",
            Object {
              "Ref": "AWS::Region",
            },
            "locationServiceRegion",
          ],
        },
      },
      "Type": "Custom::LambdaCallout",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomPlaceIndexLambda79813BB9": Object {
      "DependsOn": Array [
        "CustomPlaceIndexLambdaServiceRoleDefaultPolicy818068B1",
        "CustomPlaceIndexLambdaServiceRoleFD2F3C9D",
      ],
      "Properties": Object {
        "Code": Object {
          "ZipFile": "const response = require('cfn-response');
const aws = require('aws-sdk');
exports.handler = async function (event, context) {
  try {
    console.log('REQUEST RECEIVED:' + JSON.stringify(event));
    const pricingPlan = 'RequestBasedUsage';
    if (event.RequestType == 'Create') {
      const params = {
        IndexName: event.ResourceProperties.indexName,
        DataSource: event.ResourceProperties.dataSource,
        DataSourceConfiguration: {
          IntendedUse: event.ResourceProperties.dataSourceIntendedUse,
        },
        PricingPlan: pricingPlan
      };
      const locationClient = new aws.Location({ apiVersion: '2020-11-19', region: event.ResourceProperties.region });
      const res = await locationClient.createPlaceIndex(params).promise();
      console.log('create resource response data' + JSON.stringify(res));
      if (res.IndexName && res.IndexArn) {
        event.PhysicalResourceId = res.IndexName;
        await response.send(event, context, response.SUCCESS, res, params.IndexName);
      } else {
        await response.send(event, context, response.FAILED, res, params.IndexName);
      }
    }
    if (event.RequestType == 'Update') {
      const params = {
        IndexName: event.ResourceProperties.indexName,
        DataSourceConfiguration: {
          IntendedUse: event.ResourceProperties.dataSourceIntendedUse,
        },
        PricingPlan: pricingPlan
      };
      const locationClient = new aws.Location({ apiVersion: '2020-11-19', region: event.ResourceProperties.region });
      const res = await locationClient.updatePlaceIndex(params).promise();
      console.log('update resource response data' + JSON.stringify(res));
      if (res.IndexName && res.IndexArn) {
        event.PhysicalResourceId = res.IndexName;
        await response.send(event, context, response.SUCCESS, res, params.IndexName);
      } else {
        await response.send(event, context, response.FAILED, res, params.IndexName);
      }
    }
    if (event.RequestType == 'Delete') {
      const params = {
        IndexName: event.ResourceProperties.indexName
      };
      const locationClient = new aws.Location({ apiVersion: '2020-11-19', region: event.ResourceProperties.region });
      const res = await locationClient.deletePlaceIndex(params).promise();
      event.PhysicalResourceId = event.ResourceProperties.indexName;
      console.log('delete resource response data' + JSON.stringify(res));
      await response.send(event, context, response.SUCCESS, res, params.IndexName);
    }
  } catch (err) {
    console.log(err.stack);
    const res = { Error: err };
    await response.send(event, context, response.FAILED, res, event.ResourceProperties.indexName);
    throw err;
  }
};
",
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "CustomPlaceIndexLambdaServiceRoleFD2F3C9D",
            "Arn",
          ],
        },
        "Runtime": "nodejs16.x",
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomPlaceIndexLambdaServiceRoleDefaultPolicy818068B1": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "geo:CreatePlaceIndex",
              "Effect": "Allow",
              "Resource": "*",
            },
            Object {
              "Action": Array [
                "geo:UpdatePlaceIndex",
                "geo:DeletePlaceIndex",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Sub": Array [
                  "arn:aws:geo:\${region}:\${account}:place-index/\${indexName}",
                  Object {
                    "account": Object {
                      "Ref": "AWS::AccountId",
                    },
                    "indexName": Object {
                      "Fn::Join": Array [
                        "-",
                        Array [
                          Object {
                            "Ref": "indexName",
                          },
                          Object {
                            "Ref": "env",
                          },
                        ],
                      ],
                    },
                    "region": Object {
                      "Fn::FindInMap": Array [
                        "RegionMapping",
                        Object {
                          "Ref": "AWS::Region",
                        },
                        "locationServiceRegion",
                      ],
                    },
                  },
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CustomPlaceIndexLambdaServiceRoleDefaultPolicy818068B1",
        "Roles": Array [
          Object {
            "Ref": "CustomPlaceIndexLambdaServiceRoleFD2F3C9D",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "CustomPlaceIndexLambdaServiceRoleFD2F3C9D": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "PlaceIndexPolicy": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "geo:SearchPlaceIndexForPosition",
                "geo:SearchPlaceIndexForText",
                "geo:SearchPlaceIndexForSuggestions",
                "geo:GetPlace",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "CustomPlaceIndex",
                  "IndexArn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::Join": Array [
                  "-",
                  Array [
                    Object {
                      "Ref": "indexName",
                    },
                    Object {
                      "Ref": "env",
                    },
                  ],
                ],
              },
              "Policy",
            ],
          ],
        },
        "Roles": Array [
          Object {
            "Ref": "authRoleName",
          },
          Object {
            "Fn::Join": Array [
              "-",
              Array [
                Object {
                  "Ref": "authmockAuthUserPoolId",
                },
                "adminGroupGroupRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;
